# geant-validation-web

./: .dockerignore  .env  .eslintignore  .eslintrc.json  .gitlab-ci.yml  Dockerfile  Dockerfile.ci  Makefile  README.md  angular.json  index.ts  package-lock.json  package.json  queries.json
e2e/src/: app.e2e-spec.ts
plotter-src/: CMakeLists.txt  README.md  steeringFileExample.txt  testfile_1.txt  testfile_2.txt  testfile_3.txt
plotter-src/modules/: FindCURL.cmake
plotter-src/src/: plotter.cc
plotter-src/src/GVP/: APIReader.cc  Record.cc  chi2.cc
plotter-src/src/include/: APIReader.h  Record.h  chi2.hpp  colors.hpp
plotter-src/tests/: chart.json  histogram.json  histogram_labels.json  run.sh
src/: fomantic-ui.css  index.html  karma.conf.js  styles.css
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  gvp-plot.spec.ts  gvp-plot.ts  gvpapi.service.ts  layout.service.ts  one-time.directive.ts  plot.service.ts  staticplot.service.spec.ts  staticplot.service.ts  template.service.ts  utils.ts
src/app/classes/: api_interfaces.ts  gvp-plot.ts  urlencoder.ts
src/app/exp-viewer/: exp-viewer.component.html  exp-viewer.component.spec.ts  exp-viewer.component.ts
src/app/footer/: footer.component.css  footer.component.html
src/app/gvplayout/: gvplayout.component.css  gvplayout.component.html  gvplayout.component.spec.ts  gvplayout.component.ts
src/app/gvptemplate/: gvptemplate.component.html  gvptemplate.component.ts
src/app/home/: home.component.css  home.component.html
src/app/lookup-view/: lookup-view.component.html  lookup-view.component.ts
src/app/menu-header/: menu-header.component.css  menu-header.component.html  menu-header.component.ts
src/app/permalink/: permalink.component.html  permalink.component.ts
src/app/plot/: plot.component.css  plot.component.html  plot.component.ts  ratiofunctions.ts
src/app/plot/plot-modal/: plot-modal.component.css  plot-modal.component.html  plot-modal.component.spec.ts  plot-modal.component.ts
src/app/record-viewer/: record-viewer.component.html  record-viewer.component.spec.ts  record-viewer.component.ts
src/app/services/: gvpapi.service.spec.ts  gvpapi.service.ts  layout.service.ts  plot.service.ts  staticplot.service.ts
src/app/stat-comparison/: chi2test.ts  estimator.ts  kstest.ts  stat-comparison.component.css  stat-comparison.component.html  stat-comparison.component.spec.ts  stat-comparison.component.ts
src/app/stat-comparison/estimators/: mindy.ts
src/app/stat-comparison/stat-table/: stat-table.component.css  stat-table.component.html  stat-table.component.spec.ts  stat-table.component.ts
src/app/stat-test-list/: stat-test-list.component.html  stat-test-list.component.spec.ts  stat-test-list.component.ts
src/app/test-summary/: test-summary.component.css  test-summary.component.html  test-summary.component.ts
src/app/version-selector/: version-selector.component.html  version-selector.component.ts
src/assets/: report.tex
src/environments/: environment.prod.ts  environment.ts
